# icepack

./: pyproject.toml
.github/workflows/: test.yml
demo/: 06-adaptivity.ipynb  09-pine-island.ipynb
icepack/: __init__.py  adaptivity.py  datasets.py  registry-nsidc.txt
icepack/models/: __init__.py  fabric.py  heat_transport.py
icepack/solvers/: heat_transport.py
notebooks/how-to/: 01-performance.ipynb  02-checkpointing.ipynb  04-sparse-data.ipynb  05-regularization.ipynb  05-time-dependent-inverse.ipynb
notebooks/tutorials/: 02-synthetic-ice-shelf.ipynb  03-larsen-ice-shelf.ipynb  04-synthetic-ice-stream-xy.ipynb  05-ice-shelf-inverse.ipynb  06-hybrid-ice-stream-xz.ipynb  07-helheim-glacier.ipynb  rift.ipynb
src/icepack/: datasets.py  meshing.py  statistics.py
src/icepack/solvers/: flow_solver.py
test/: adaptivity_test.py  data_fetch_test.py  fabric_test.py  heat_transport_test.py  meshing_test.py  statistics_test.py
