[project]
name = "icepack"
version = "1.1.0"
description = "glacier flow modeling with the finite element method"
authors = [
    {name = "Daniel Shapero", email = "shapero@uw.edu"}
]
license = {text = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "rasterio",
    "xarray",
    "netCDF4",
    "geojson",
    "geopandas",
    "shapely",
    "pooch",
    "gmsh",
    "pygmsh>=7.0",
    "meshio>=5.0",
    "MeshPy",
    "tqdm",
    "roltrilinos@git+https://github.com/icepack/Trilinos",
    "ROL@git+https://github.com/icepack/pyrol",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
